--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src//assets/assets_frontend/webLogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+    rel="stylesheet"
+  />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="width:80%;margin:auto"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
